# advent-of-code-2018

day1/: day1.cabal
day1/src/: Main.hs
day2/: day2.cabal
day2/src/: Main.hs
day3/: day3.cabal
day3/app/: Main.hs
day3/src/: Lib.hs
day3/test/: Spec.hs
day4/: day4.cabal
day4/app/: Main.hs
day4/src/: Lib.hs
day4/test/: Spec.hs
day5/: day5.cabal
day5/app/: Main.hs
day5/src/: Lib.hs
day5/test/: Spec.hs
day6/: day6.cabal
day6/app/: Main.hs
day6/src/: Lib.hs
day6/test/: Spec.hs
