name:                day2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jisantuc/day2#readme
license:             MIT
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2018 James Santucci
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.13.2.2 && < 0.14
                     , bytestring >= 0.10.8.2 && < 0.11
                     , containers >= 0.5.11 && < 0.6
  default-extensions:  OverloadedStrings

test-suite day2-tests
  main-is:             MainSpec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       base
                     , bytestring
                     , hspec == 2.*
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  GHC-options:         -Wall -threaded -fno-warn-orphans

