name:                day4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jisantuc/day4#readme
license:             MIT
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2018 James Santucci
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.13.2.2 && < 0.14
                     , bytestring >= 0.10.8.2 && < 0.11
                     , containers >= 0.5.11 && < 0.6
                     , sorted-list >= 0.2.1.0 && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable day4-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , day4
                     , attoparsec >= 0.13.2.2 && < 0.14
                     , bytestring >= 0.10.8.2 && < 0.11
  default-language:    Haskell2010

test-suite day4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day4
                     , attoparsec >= 0.13.2.2 && < 0.14
                     , hspec
                     , containers >= 0.5.11 && < 0.6
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/jisantuc/day4
